edição no formulário de cadastro

--- a/aluno/projeto_tcc/editar/index.html
+++ b/aluno/projeto_tcc/editar/index.html
@@ -36,17 +36,18 @@
             </div>
 
 
-            <div class="documentacao">
+            <div class="col-md-3 documentacao">
                 <label>Documentação do projeto:</label>
-                <input type="file" class="form-control-file terceiro_botao" id="exampleFormControlFile1">
+                <input type="file" name="file" id="file" class="inputfile" />
+                <label for="file">ANEXAR ARQUIVO</label>
+            </div>
 
-                <div class="buttons">
-                    <div class="col-md-3">
-                        <a href="../index.html"><button class="primeiro_botao" type="button">SALVAR</button></a>
-                    </div>
-                    <div class="col-md-3">
-                        <a href="../index.html"><button class="segundo_botao" type="button">CANCELAR</button></a>
-                    </div>
+            <div class="buttons">
+                <div class="col-md-3">
+                    <a href="../index.html"><button class="segundo_botao" type="button">CANCELAR</button></a>
+                </div>
+                <div class="col-md-3">
+                    <a href="../index.html"><button class="primeiro_botao" type="button">SALVAR</button></a>
                 </div>
             </div>
         </form>
