--- a/aluno/projeto_tcc/index.html
+++ b/aluno/projeto_tcc/index.html
@@ -211,21 +211,21 @@
                         <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                             data-width="80" data-height="80"></span>
                     </div>
-                    <p >NOME</p>
+                    <p>NOME</p>
                 </li>
                 <li class="list-group-item li-orientadores">
                     <div class="orientadores">
                         <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                             data-width="80" data-height="80"></span>
                     </div>
-                    <p >NOME</p>
+                    <p>NOME</p>
                 </li>
                 <li class="list-group-item li-orientadores">
                     <div class="orientadores">
                         <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                             data-width="80" data-height="80"></span>
                     </div>
-                    <p >NOME</p>
+                    <p>NOME</p>
                 </li>
             </ul>
         </div>
@@ -238,14 +238,21 @@
             </div>
         </div>
 
-        <div class="documentacao">
-            <label>Documentação do projeto:</label>
-            <a href=""><button type="button" class="primeiro_botao">VISUALIZAR PDF</button></a>
+        <div class="col-md-3 documentacao_div">
+            <div class="documentacao">
+                <label>Documentação do projeto:</label>
+                <a href=""><button type="button" class="primeiro_botao">VISUALIZAR PDF</button></a>
+            </div>
         </div>
 
-        <div class="editar">
-          <a href="./editar/index.html"><button type="button" class="segundo_botao">EDITAR</button></a>
+
+        <div class="editar_div">
+            <a class="col-md-3 editar" href="./editar/index.html">
+                <button type="button" class="segundo_botao ">EDITAR</button>
+            </a>
         </div>
+
+
     </div>
 
 
