--- a/aluno/projeto_tcc/editar/index.html
+++ b/aluno/projeto_tcc/editar/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
     <title>EDITAR PROJETO</title>
 </head>
 
@@ -35,11 +35,15 @@
                 </div>
             </div>
 
-
             <div class="col-md-3 documentacao">
                 <label>Documentação do projeto:</label>
-                <input type="file" name="file" id="file" class="inputfile" />
+                <input type="file" name="file" id="file" class="inputfile" multiple onchange="updateList()"></input>
                 <label for="file">ANEXAR ARQUIVO</label>
+
+            </div>
+
+            <div class="col-md-5 anexado">
+                <label id="fileList" class="terceiro_botao"></label>
             </div>
 
             <div class="buttons">
