dois links do side menu arrumados

--- a/professor/componentes/side_menu/side_menu.html
+++ b/professor/componentes/side_menu/side_menu.html
@@ -54,7 +54,7 @@
                 <span class="tooltip">Editar usuário</span>
             </li>
             <li class="profile">
-                <a href="#">
+                <a href="../../../home/login/index.html">
                     <i class='bx bx-log-out' id="log_out"></i>
                     <span class="links_name">Log Out</span>
                 </a>
