--- a/aluno/projeto_tcc/index.html
+++ b/aluno/projeto_tcc/index.html
@@ -24,9 +24,12 @@
 
         <div class="descricao">
             <h1>Descrição do projeto:</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl velit, in dapibus
-                lectus tristique vitae. Ut ut ullamcorper tortor. Nullam sed velit diam. Suspendisse vehicula lacinia
-                fermentum. Sed non ultricies lacus.</p>
+            <div contentEditable="true">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl velit, in dapibus
+                    lectus tristique vitae. Ut ut ullamcorper tortor. Nullam sed velit diam. Suspendisse vehicula
+                    lacinia
+                    fermentum. Sed non ultricies lacus.</p>
+            </div>
         </div>
 
         <div class="cont-integrantes">
