--- a/home/index.html
+++ b/home/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./componentes/header/styles_header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +14,25 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <a href="#">
+            <img src="./images-global/logo-branca.svg" alt="logo" />
+        </a>
+        <nav>
+            <ul class="nav_links">
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Produto</a></li>
+                <li><a href="#">Planos & Preços</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+        <nav class="login_adquirir">
+            <a href="#" class="login_link">Login</a>
+            <a href="#">
+                <button>ADQUIRIR →</button>
+            </a>
+        </nav>
+    </header>
     <main>
         <div class="container">
             <h1>NEXUS TCC</h1>
