--- a/instituicao/turmas/index.html
+++ b/instituicao/turmas/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../componentes/header/styles_header.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../componentes/header/style.css">
+    <link rel="stylesheet" href="../componentes/header/styles_header.css">
     <script src="script.js" defer></script>
 
     <title>LISTAGEM DE TURMAS</title>
@@ -22,6 +24,17 @@
 <div class="bg"></div>
 
 <body>
+    <header>
+        <div class="primeira_parte">
+            <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas">
+            <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+        </div>
+        
+        <a href="../../index.html">
+            <img src="../componentes/header/img/perfil_instituicao.svg" alt="perfil">
+        </a>
+    </header>
+    
     <div class="container-geral">
         <div class="container">
             <div class="col-md-6 for-cnp cursos_existentes icon">
