--- a/home/index.html
+++ b/home/index.html
@@ -20,14 +20,14 @@
         </a>
         <nav>
             <ul class="nav_links">
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Produto</a></li>
-                <li><a href="#">Planos & Preços</a></li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="./produto/index.html">Produto</a></li>
+                <li><a href="./compra/index.html">Planos & Preços</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
         <nav class="login_adquirir">
-            <a href="#" class="login_link">Login</a>
+            <a href="./login/index.html" class="login_link">Login</a>
             <a href="#">
                 <button>ADQUIRIR →</button>
             </a>
