--- a/instituicao/turmas/index.html
+++ b/instituicao/turmas/index.html
@@ -16,25 +16,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../componentes/header/style.css">
     <link rel="stylesheet" href="../componentes/header/styles_header.css">
+    <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css">
     <script src="script.js" defer></script>
-
-    <title>LISTAGEM DE TURMAS</title>
 </head>
 
 <div class="bg"></div>
 
 <body>
-    <header>
-        <div class="primeira_parte">
-            <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas">
-            <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
-        </div>
-        
-        <a href="../../index.html">
-            <img src="../componentes/header/img/perfil_instituicao.svg" alt="perfil">
-        </a>
-    </header>
-    
     <div class="container-geral">
         <div class="container">
             <div class="col-md-6 for-cnp cursos_existentes icon">
@@ -514,7 +502,7 @@
                                 data-width="100" data-height="100"></span>
                             <p class="grupo">GRUPO</p>
                         </div>
-                         <div class="tipo">
+                        <div class="tipo">
                             <p>TIPO</p>
                         </div>
                     </li>
@@ -531,7 +519,7 @@
                                 data-width="100" data-height="100"></span>
                             <p class="grupo">GRUPO</p>
                         </div>
-                         <div class="tipo">
+                        <div class="tipo">
                             <p>TIPO</p>
                         </div>
                     </li>
@@ -548,7 +536,7 @@
                                 data-width="100" data-height="100"></span>
                             <p class="grupo">GRUPO</p>
                         </div>
-                         <div class="tipo">
+                        <div class="tipo">
                             <p>TIPO</p>
                         </div>
                     </li>
