arrumando o side menu de professor

--- a/professor/componentes/side_menu/side_menu.html
+++ b/professor/componentes/side_menu/side_menu.html
@@ -27,13 +27,6 @@
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-user-plus' ></i>
-                    <span class="links_name">Criar novo grupo</span>
-                </a>
-                <span class="tooltip">Novo grupo</span>
-            </li>
-            <li>
-                <a href="#">
                     <i class='bx bxs-graduation'></i>
                     <span class="links_name">Atividades</span>
                 </a>
@@ -48,10 +41,10 @@
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-edit'></i>
-                    <span class="links_name">Editar usuário</span>
+                    <i class='bx bx-user'></i>
+                    <span class="links_name">Usuários</span>
                 </a>
-                <span class="tooltip">Editar usuário</span>
+                <span class="tooltip">Usuários</span>
             </li>
             <li class="profile">
                 <a href="../../../home/login/index.html">
