--- a/professor/cursos/index.html
+++ b/professor/cursos/index.html
@@ -26,48 +26,41 @@
             <i class='bx bx-menu' id="btn"></i>
         </div>
         
-            <li>
-                <a href="./index.html">
-                    <i class='bx bx-group' ></i>
-                    <span class="links_name">Cursos</span>
-                </a>
-                <span class="tooltip">Cursos</span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class='bx bx-user-plus' ></i>
-                    <span class="links_name">Criar novo grupo</span>
-                </a>
-                <span class="tooltip">Novo grupo</span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class='bx bxs-graduation'></i>
-                    <span class="links_name">Atividades</span>
-                </a>
-                <span class="tooltip">Atividades</span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class='bx bx-folder-open' ></i>
-                    <span class="links_name">Arquivos e links</span>
-                </a>
-                <span class="tooltip">Arquivos</span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class='bx bx-edit'></i>
-                    <span class="links_name">Editar usuário</span>
-                </a>
-                <span class="tooltip">Editar usuário</span>
-            </li>
-            <li class="profile">
-                <a href="">
-                    <i class='bx bx-log-out' id="log_out"></i>
-                    <span class="links_name">Log Out</span>
-                </a>
-                <span class="tooltip">Log Out</span>
-            </li>
+        <li>
+            <a href="#">
+                <i class='bx bx-group' ></i>
+                <span class="links_name">Cursos</span>
+            </a>
+            <span class="tooltip">Cursos</span>
+        </li>
+        <li>
+            <a href="#">
+                <i class='bx bxs-graduation'></i>
+                <span class="links_name">Atividades</span>
+            </a>
+            <span class="tooltip">Atividades</span>
+        </li>
+        <li>
+            <a href="#">
+                <i class='bx bx-folder-open' ></i>
+                <span class="links_name">Arquivos e links</span>
+            </a>
+            <span class="tooltip">Arquivos</span>
+        </li>
+        <li>
+            <a href="#">
+                <i class='bx bx-user'></i>
+                <span class="links_name">Usuários</span>
+            </a>
+            <span class="tooltip">Usuários</span>
+        </li>
+        <li class="profile">
+            <a href="../../../home/login/index.html">
+                <i class='bx bx-log-out' id="log_out"></i>
+                <span class="links_name">Log Out</span>
+            </a>
+            <span class="tooltip">Log Out</span>
+        </li>
 
     </div>
 
