--- a/professor/cursos/turmas/index.html
+++ b/professor/cursos/turmas/index.html
@@ -35,18 +35,11 @@
         </div>
 
         <li>
-            <a href="../index.html">
-                <i class='bx bx-group'></i>
+            <a href="#">
+                <i class='bx bx-group' ></i>
                 <span class="links_name">Cursos</span>
             </a>
             <span class="tooltip">Cursos</span>
-        </li>
-        <li>
-            <a href="#">
-                <i class='bx bx-user-plus'></i>
-                <span class="links_name">Criar novo grupo</span>
-            </a>
-            <span class="tooltip">Novo grupo</span>
         </li>
         <li>
             <a href="#">
@@ -57,17 +50,17 @@
         </li>
         <li>
             <a href="#">
-                <i class='bx bx-folder-open'></i>
+                <i class='bx bx-folder-open' ></i>
                 <span class="links_name">Arquivos e links</span>
             </a>
             <span class="tooltip">Arquivos</span>
         </li>
         <li>
             <a href="#">
-                <i class='bx bx-edit'></i>
-                <span class="links_name">Editar usuário</span>
+                <i class='bx bx-user'></i>
+                <span class="links_name">Usuários</span>
             </a>
-            <span class="tooltip">Editar usuário</span>
+            <span class="tooltip">Usuários</span>
         </li>
         <li class="profile">
             <a href="../../../home/login/index.html">
