fazendo modais de crud de grupo

--- a/professor/cursos/turmas/index.html
+++ b/professor/cursos/turmas/index.html
@@ -337,134 +337,190 @@
         <h1>GRUPOS DA TURMA</h1>
         <ul class="list-group ul-grupo">
             <li class="list-group-item li">
-                <div class="grupo">
-                    <span><p class="prof_orientador">Professor Orientador: </p> <p id="nomeProfessorOrientadorModalGrupos"></p></span>
-                    <a href="grupo/index.html">
-                        <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
-                            data-width="130" data-height="130"></span>
-                    </a>
-                    <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
-                    <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
-                </div>
-                <div class="grupo">
-                    <span><p class="prof_orientador">Professor Orientador: </p> <p id="nomeProfessorOrientadorModalGrupos"></p></span>
-                    <a href="grupo/index.html">
-                        <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
-                            data-width="130" data-height="130"></span>
-                    </a>
-                    <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
-                    <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
-                </div>
-                <div class="grupo">
-                    <span><p class="prof_orientador">Professor Orientador: </p> <p id="nomeProfessorOrientadorModalGrupos"></p></span>
-                    <a href="grupo/index.html">
-                        <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
-                            data-width="130" data-height="130"></span>
-                    </a>
-                    <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
-                    <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
-                </div>
-                <div class="grupo">
-                    <span><p class="prof_orientador">Professor Orientador: </p> <p id="nomeProfessorOrientadorModalGrupos"></p></span>
-                    <a href="grupo/index.html">
-                        <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
-                            data-width="130" data-height="130"></span>
-                    </a>
-                    <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
-                    <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
-                </div>
-            </li>
 
+                <div class="grupo">
+                    <button class="btnExcluirGrupo" onclick="showModalExcluirGrupo()"><i class='bx bx-trash'></i></button>
+                    <a href="grupo/index.html">
+                        <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                            data-width="130" data-height="130"></span>
+                        <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
+                        <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
+                    </a>
+                </div>
+
+                <div class="grupo">
+                    <button class="btnExcluirGrupo" onclick="showModalExcluirGrupo()"><i class='bx bx-trash'></i></button>
+                    <a href="grupo/index.html">
+                        <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                            data-width="130" data-height="130"></span>
+                        <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
+                        <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
+                    </a>
+                </div>
+
+                <div class="grupo">
+                    <button class="btnExcluirGrupo" onclick="showModalExcluirGrupo()"><i class='bx bx-trash'></i></button>
+                    <a href="grupo/index.html">
+                        <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                            data-width="130" data-height="130"></span>
+                        <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
+                        <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
+                    </a>
+                </div>
+
+                <div class="grupo">
+                    <button class="btnExcluirGrupo" onclick="showModalExcluirGrupo()"><i class='bx bx-trash'></i></button>
+                    <a href="grupo/index.html">
+                        <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                            data-width="130" data-height="130"></span>
+                        <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
+                        <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
+                    </a>
+                </div>
+
+            </li>
 
             <img src="./img/linha.svg" alt="">
 
             <li class="list-group-item li">
+
                 <div class="grupo">
-                    <span><p class="prof_orientador">Professor Orientador: </p> <p id="nomeProfessorOrientadorModalGrupos"></p></span>
+                    <button class="btnExcluirGrupo" onclick="showModalExcluirGrupo()"><i class='bx bx-trash'></i></button>
                     <a href="grupo/index.html">
                         <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
                             data-width="130" data-height="130"></span>
+                        <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
+                        <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                     </a>
-                    <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
-                    <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                 </div>
+
                 <div class="grupo">
-                    <span><p class="prof_orientador">Professor Orientador: </p> <p id="nomeProfessorOrientadorModalGrupos"></p></span>
+                    <button class="btnExcluirGrupo" onclick="showModalExcluirGrupo()"><i class='bx bx-trash'></i></button>
                     <a href="grupo/index.html">
                         <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
                             data-width="130" data-height="130"></span>
+                        <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
+                        <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                     </a>
-                    <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
-                    <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                 </div>
+
                 <div class="grupo">
-                    <span><p class="prof_orientador">Professor Orientador: </p> <p id="nomeProfessorOrientadorModalGrupos"></p></span>
+                    <button class="btnExcluirGrupo" onclick="showModalExcluirGrupo()"><i class='bx bx-trash'></i></button>
                     <a href="grupo/index.html">
                         <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
                             data-width="130" data-height="130"></span>
+                        <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
+                        <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                     </a>
-                    <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
-                    <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                 </div>
+
                 <div class="grupo">
-                    <span><p class="prof_orientador">Professor Orientador: </p> <p id="nomeProfessorOrientadorModalGrupos"></p></span>
+                    <button class="btnExcluirGrupo" onclick="showModalExcluirGrupo()"><i class='bx bx-trash'></i></button>
                     <a href="grupo/index.html">
                         <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
                             data-width="130" data-height="130"></span>
+                        <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
+                        <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                     </a>
-                    <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
-                    <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                 </div>
+
             </li>
 
             <img src="./img/linha.svg" alt="">
             <li class="list-group-item li">
+                
                 <div class="grupo">
-                    <span><p class="prof_orientador">Professor Orientador: </p> <p id="nomeProfessorOrientadorModalGrupos"></p></span>
+                    <button class="btnExcluirGrupo" onclick="showModalExcluirGrupo()"><i class='bx bx-trash'></i></button>
                     <a href="grupo/index.html">
                         <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
                             data-width="130" data-height="130"></span>
+                        <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
+                        <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                     </a>
-                    <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
-                    <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                 </div>
+
                 <div class="grupo">
-                    <span><p class="prof_orientador">Professor Orientador: </p> <p id="nomeProfessorOrientadorModalGrupos"></p></span>
+                    <button class="btnExcluirGrupo" onclick="showModalExcluirGrupo()"><i class='bx bx-trash'></i></button>
                     <a href="grupo/index.html">
                         <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
                             data-width="130" data-height="130"></span>
+                        <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
+                        <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                     </a>
-                    <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
-                    <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                 </div>
+
                 <div class="grupo">
-                    <span><p class="prof_orientador">Professor Orientador: </p> <p id="nomeProfessorOrientadorModalGrupos"></p></span>
+                    <button class="btnExcluirGrupo" onclick="showModalExcluirGrupo()"><i class='bx bx-trash'></i></button>
                     <a href="grupo/index.html">
                         <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
                             data-width="130" data-height="130"></span>
+                        <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
+                        <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                     </a>
-                    <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
-                    <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                 </div>
+
                 <div class="grupo">
-                    <span><p class="prof_orientador">Professor Orientador: </p> <p id="nomeProfessorOrientadorModalGrupos"></p></span>
+                    <button class="btnExcluirGrupo" onclick="showModalExcluirGrupo()"><i class='bx bx-trash'></i></button>
                     <a href="grupo/index.html">
                         <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
                             data-width="130" data-height="130"></span>
+                        <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
+                        <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                     </a>
-                    <span><p class="numero">Grupo </p> <p id="numeroGrupoModalGrupos"></p></span>
-                    <p class="tema" id="temaProjetoModalGrupos">TEMA</p>
                 </div>
+
             </li>
 
         </ul>
+
         <div class="buttons">
             <div class="col-md-3 botao_cancelar">
                 <button class="segundo_botao" onclick="exitModalGrupos()" type="button">CANCELAR</button>
             </div>
 
             <div class="col-md-3">
-                <button class="terceiro_botao" type="button" onclick="showModalAddMembrosTurmaCriada()">EDITAR GRUPOS</button>
+                <button class="terceiro_botao" type="button" onclick="showModalCriarGrupo()">NOVO GRUPO</button>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="container mt-5 container modal modal-criar-grupo" id="modal-criar-grupo">
+        <h1>CRIAR GRUPO</h1>
+        <form class="row g-7">
+
+            <div class="col-md-6 lab-inp">
+                <label for="nomeNovoGrupo" class="form-label">Nome:</label>
+                <input type="text" class="form-control novo-grupo" id="inputNomeNovoGrupoModal" placeholder="Grupo 3" maxlength="255">
+            </div>
+
+            <div class="col-md-6 lab-inp">
+                <label for="numero-estudantes" class="form-label">Número do grupo:</label>
+                <input type="" class="form-control numero-estudantes" id="inputNumeroEstudantesModal" placeholder="3">
+            </div>
+
+            <div class="buttons">
+                <div class="col-md-3">
+                    <button class="segundo_botao" type="button" onclick="exitModalCriarGrupo()">CANCELAR</button>
+                </div>
+
+                <div class="col-md-3">
+                    <button class="terceiro_botao" onclick="showModalMembros()" type="submit" id="membrosTurmaModal">CRIAR</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <div class="container modal modal-excluir-grupo" id="modal-excluir-grupo">
+        <h1>DESEJA EXCLUIR ESSE GRUPO?</h1>
+        <h2>Lembre-se que essa é uma ação irreversível!</h2>
+
+        <div class="col-md-12 buttons">
+            <div class="col-md-6">
+                <button class="segundo_botao" onclick="exitModalExcluirGrupo()" type="button">CANCELAR</button>
+            </div>
+            <div class="col-md-6">
+                <button class="quarto_botao" onclick="exitModalExcluirGrupo()" type="submit">CONFIRMAR</button>
             </div>
         </div>
     </div>
